Fix social media preview images - Corregge og:image e twitter:image con logo esistente

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <meta property="og:url" content="https://www.fbtotalsecurity.com/">
     <meta property="og:title" content="FB Total Security - Sistemi di Sicurezza Avanzata | Italia" data-translate="index-og-title">
     <meta property="og:description" content="Specialisti in sistemi di sicurezza avanzati: nebbiogeni, serramenti blindati, videosorveglianza e allarmi. Oltre 20 anni di esperienza. Servizi in tutta Italia." data-translate="index-og-description">
-    <meta property="og:image" content="https://www.fbtotalsecurity.com/images/og-image.jpg">
+    <meta property="og:image" content="https://www.fbtotalsecurity.com/icons/logo_sito_franco.webp">
     <meta property="og:locale" content="it_IT">
     <meta property="og:locale:alternate" content="en_US">
     <meta property="og:site_name" content="FB Total Security">
@@ -97,7 +97,7 @@
     <meta property="twitter:url" content="https://www.fbtotalsecurity.com/">
     <meta property="twitter:title" content="FB Total Security - Sistemi di Sicurezza Avanzata | Italia" data-translate="index-twitter-title">
     <meta property="twitter:description" content="Specialisti in sistemi di sicurezza avanzati: nebbiogeni, serramenti blindati, videosorveglianza e allarmi. Oltre 20 anni di esperienza. Servizi in tutta Italia." data-translate="index-twitter-description">
-    <meta property="twitter:image" content="https://www.fbtotalsecurity.com/images/og-image.jpg">
+    <meta property="twitter:image" content="https://www.fbtotalsecurity.com/icons/logo_sito_franco.webp">
     
     <!-- Hreflang tags -->
     <link rel="alternate" hreflang="it" href="https://www.fbtotalsecurity.com/?lang=it">
