Aggiunto link inserzione aziendale gratuita su professionisti-italia.it in tutte le pagine del sito

--- a/allarmi.html
+++ b/allarmi.html
@@ -918,6 +918,7 @@
                     <ul>
                         <li><a href="chi-siamo.html" data-translate="footer-info-about">Chi Siamo</a></li>
                         <li><a href="termini-condizioni.html" data-translate="footer-info-terms">Termini e Condizioni</a></li>
+                        <li><a title="Inserisci la tua azienda gratis su professionisti Italia" href="https://www.professionisti-italia.it" target="_blank" rel="noopener">Inserisci la tua azienda gratis</a></li>
                     </ul>
                 </div>
             </div>
