--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -626,6 +626,7 @@
                         <li><a href="#">Termini di Servizio</a></li>
                         <li><a href="termini-condizioni.html">Termini e Condizioni</a></li>
                         <li><a href="chi-siamo.html">Chi Siamo</a></li>
+                        <li><a title="Inserisci la tua azienda gratis su professionisti Italia" href="https://www.professionisti-italia.it" target="_blank" rel="noopener">Inserisci la tua azienda gratis</a></li>
                     </ul>
                 </div>
             </div>
