--- a/index.html
+++ b/index.html
@@ -1521,6 +1521,7 @@ img {
                         <li><a href="#" title="Leggi i nostri termini di servizio">Termini di Servizio</a></li>
                         <li><a href="termini-condizioni.html" title="Leggi i nostri termini e condizioni di servizio">Termini e Condizioni</a></li>
                         <li><a href="#" title="Visualizza le nostre certificazioni di sicurezza">Certificazioni</a></li>
+                        <li><a title="Inserisci la tua azienda gratis su professionisti Italia" href="https://www.professionisti-italia.it" target="_blank" rel="noopener">Inserisci la tua azienda gratis</a></li>
                     </ul>
                 </div>
             </div>
