--- a/serramenti.html
+++ b/serramenti.html
@@ -976,6 +976,7 @@
                         <li data-translate="footer-installation">Installazione</li>
                         <li data-translate="footer-maintenance">Manutenzione</li>
                         <li data-translate="footer-support">Assistenza 24/7</li>
+                        <li><a title="Inserisci la tua azienda gratis su professionisti Italia" href="https://www.professionisti-italia.it" target="_blank" rel="noopener">Inserisci la tua azienda gratis</a></li>
                     </ul>
                 </div>
             </div>
