Fix: Risolto problema bottone Web Novis nel footer
- Modificata struttura HTML per separare traduzione testo da funzionalità bottone
- Rimosso data-translate dal paragrafo contenitore webnovis-contact
- Aggiunto span separato per testo tradotto
- Mantenuto bottone con proprio data-translate per funzionalità
- Applicato fix a tutti i file HTML: index, allarmi, serramenti, nebbiogeni, chi-siamo, sorveglianza
- Il bottone ora rimane sempre visibile e funzionante indipendentemente dalla lingua

--- a/index.html
+++ b/index.html
@@ -1527,7 +1527,11 @@ img {
             </div>
             <div class="footer-bottom">
                 <p data-translate="footer-copyright">&copy; 2025 FB Total Security. Tutti i diritti riservati. | P.IVA: 12345678901</p>
-                <p data-translate="footer-created-by">Creato da Web Novis</p>
+                <p data-translate="footer-created-by">Creato e Curato da Web Novis</p>
+                <p class="webnovis-contact">
+                    <span data-translate="footer-webnovis-contact">Per una soluzione cucita su misura per te</span> 
+                    <a href="mailto:webnovis.info@gmail.com" class="webnovis-btn" title="Contatta Web Novis per soluzioni personalizzate" data-translate="footer-webnovis-btn">contatta Web Novis</a>
+                </p>
             </div>
         </div>
     </footer>
