--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -286,7 +286,7 @@
             </div>
             <div class="footer-bottom">
                 <p data-translate="footer-copyright">&copy; 2025 FB Total Security. Tutti i diritti riservati.</p>
-                <p data-translate="footer-created-by">Creato da Web Novis</p>
+                <p data-translate="footer-created-by">Creato e curato da Web Novis</p>
             </div>
         </div>
     </footer>
