--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -126,6 +126,12 @@
             flex-direction: column;
             justify-content: center;
             contain: layout style;
+            /* PREVENZIONE LAYOUT SHIFT AGGIUNTIVA */
+            will-change: auto;
+            backface-visibility: hidden;
+            perspective: 1000px;
+            transform: translateZ(0);
+            isolation: isolate;
         }
 
         .hero-title {
@@ -141,6 +147,13 @@
 
         .hero-cta {
             min-height: 120px;
+            /* PREVENZIONE LAYOUT SHIFT AGGIUNTIVA */
+            contain: layout style paint;
+            transform: translateZ(0);
+            will-change: auto;
+            backface-visibility: hidden;
+            isolation: isolate;
+            box-sizing: border-box;
         }
 
         @media (min-width: 768px) {
@@ -269,6 +282,7 @@
                         <li><a href="serramenti.html" class="nav-link" data-translate="nav-serramenti" title="Serramenti blindati e porte di sicurezza">Serramenti</a></li>
                         <li><a href="sorveglianza.html" class="nav-link" data-translate="nav-sorveglianza" title="Sistemi di videosorveglianza intelligente">Sorveglianza</a></li>
                         <li><a href="allarmi.html" class="nav-link" data-translate="nav-allarmi" title="Sistemi di allarme intelligenti">Allarmi</a></li>
+                        <li><a href="lavora-con-noi.html" class="nav-link" data-translate="nav-lavora-con-noi" title="Opportunità di lavoro e carriera">Lavora con noi</a></li>
                         <li><a href="chi-siamo.html" class="nav-link" data-translate="nav-chi-siamo" title="Scopri la nostra azienda e i nostri valori">Chi siamo</a></li>
                         <li><a href="#contatti" class="nav-link cta" data-translate="nav-contatti" title="Contattaci per un preventivo gratuito">Contatti</a></li>
                     <li class="desktop-language-selector">
@@ -517,6 +531,15 @@
                             <div>
                                 <h3 data-translate="contact-email-title">Email</h3>
                                 <p><a href="mailto:postmaster@fbtotalsecurity.com">postmaster@fbtotalsecurity.com</a></p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+                            </svg>
+                            <div>
+                                <h3 data-translate="contact-phone-title">Telefono</h3>
+                                <p><a href="tel:+393802647367" class="phone-button">Chiama Ora</a></p>
                             </div>
                         </div>
                         <div class="contact-item">
