--- a/sorveglianza.html
+++ b/sorveglianza.html
@@ -457,6 +457,7 @@
                         <li><a href="serramenti.html" class="nav-link" data-translate="nav-serramenti" title="Serramenti blindati e porte di sicurezza">Serramenti</a></li>
                         <li><a href="sorveglianza.html" class="nav-link" data-translate="nav-sorveglianza" title="Sistemi di videosorveglianza intelligente">Sorveglianza</a></li>
                         <li><a href="allarmi.html" class="nav-link" data-translate="nav-allarmi" title="Sistemi di allarme intelligenti">Allarmi</a></li>
+                        <li><a href="lavora-con-noi.html" class="nav-link" data-translate="nav-lavora-con-noi" title="Opportunità di lavoro e carriera">Lavora con noi</a></li>
                         <li><a href="chi-siamo.html" class="nav-link" data-translate="nav-chi-siamo" title="Scopri la nostra azienda e i nostri valori">Chi siamo</a></li>
                         <li><a href="#contatti" class="nav-link cta" data-translate="nav-contatti" title="Contattaci per un preventivo gratuito">Contatti</a></li>
                     <li class="desktop-language-selector">
@@ -840,6 +841,14 @@
                         <div class="contact-details">
                             <h3 data-translate="sorveglianza-contact-email">Email</h3>
                             <p><a href="mailto:postmaster@fbtotalsecurity.com">postmaster@fbtotalsecurity.com</a></p>
+                        </div>
+                    </div>
+                    
+                    <div class="contact-item">
+                        <div class="contact-icon">📞</div>
+                        <div class="contact-details">
+                            <h3 data-translate="contact-phone-title">Telefono</h3>
+                            <p><a href="tel:+393802647367" class="phone-button">Chiama Ora</a></p>
                         </div>
                     </div>
                     
